<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_color"
    android:padding="15dp"
    tools:context=".presentation.ui.HomeScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/searchInputLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/search_input_background"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="7"
                android:fontFamily="@font/nunito_bold"
                android:hint="@string/search_user"
                android:inputType="text"
                android:textSize="16sp"
                app:hintEnabled="false" />

            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/search_icon_description"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_search_24" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/profile_info_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchInputLayout">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/user_icon_description"
                android:src="@drawable/ic_baseline_person_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar" />

            <ImageView
                android:id="@+id/reposIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/repository_icon_description"
                android:src="@drawable/ic_baseline_repos_24"
                app:layout_constraintBottom_toBottomOf="@+id/avatar"
                app:layout_constraintStart_toStartOf="@+id/userIcon"
                app:layout_constraintTop_toBottomOf="@+id/userIcon" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/nunito"
                app:layout_constraintBottom_toBottomOf="@+id/userIcon"
                app:layout_constraintStart_toEndOf="@+id/userIcon"
                app:layout_constraintTop_toTopOf="@+id/userIcon"
                tools:text="Breens-Mbaka" />

            <TextView
                android:id="@+id/repositoryNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                app:layout_constraintBottom_toBottomOf="@+id/reposIcon"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toTopOf="@+id/reposIcon"
                tools:text="60 repository" />

            <LinearLayout
                android:id="@+id/statsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar">

                <TextView
                    android:id="@+id/repositoryCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito_bold"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="60" />

                <TextView
                    android:id="@+id/starsCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito_bold"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="60" />

                <TextView
                    android:id="@+id/followersCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito_bold"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="600" />

                <TextView
                    android:id="@+id/followingCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito_bold"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="30" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/statsLabelContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statsContainer">

                <TextView
                    android:id="@+id/repositoryCountLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito"
                    android:text="@string/repositories"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/starsCountLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito"
                    android:text="@string/stars"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/followersCountLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito"
                    android:text="@string/followers"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/followingCountLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/nunito"
                    android:text="@string/following"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:id="@+id/horizontalLineSeparator"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/statsLabelContainer"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/bioInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:fontFamily="@font/nunito_bold"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLineSeparator" />

            <TextView
                android:id="@+id/bio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Android Developer"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito"
                android:paddingBottom="12dp"
                app:layout_constraintStart_toStartOf="@+id/bioInfoLabel"
                app:layout_constraintTop_toBottomOf="@+id/bioInfoLabel" />

            <View
                android:id="@+id/horizontalLineSeparator2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bio"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/locationInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:fontFamily="@font/nunito_bold"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLineSeparator2" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Kenya"
                android:textAlignment="textStart"
                android:fontFamily="@font/nunito"
                android:paddingBottom="12dp"
                app:layout_constraintStart_toStartOf="@+id/bioInfoLabel"
                app:layout_constraintTop_toBottomOf="@+id/locationInfoLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>